--- a/PSS/Shared/TwoChoiceInput.razor
+++ b/PSS/Shared/TwoChoiceInput.razor
@@ -8,7 +8,9 @@
     Optional Parameters:
     1. String YesBtnText: 'Yes' by default
     2. String NoBtnText: 'No' by default
-    3. String PositioningStyle. Styling used for positioning this thing. Defaults to center of screen, but can be changed to like absolute position and top right corner of screen. 
+    3. String PositioningStyle. Styling used for positioning this thing. Defaults to center of screen, but can be changed to like absolute position and top right corner of screen.
+    4. String YesBtnIcon. The Google Icons icon for the Yes button. Default is "check".
+    5. String NoBtnIcon. The Google Icons icon for the No button. Default is "close".
 *@
 @using PSS.Backend
 <link href="css/components/TwoChoiceInput.css" rel="stylesheet">
@@ -16,8 +18,8 @@
 <div id="inputDiv" style="visibility: @TwoChoiceVis; @PositioningStyle">
     <span id="message">@Message</span>
     <div id="buttons">
-        <button @onclick="@(() => NoBtnClick.Invoke())"><span class="material-icons-outlined">close</span><span>@NoBtnText</span></button>
-        <button @onclick="@(() => YesBtnClick.Invoke())"><span class="material-icons-outlined">check</span><span>@YesBtnText</span></button>
+        <button @onclick="@(() => NoBtnClick.Invoke())"><span class="material-icons-outlined">@NoBtnIcon</span><span>@NoBtnText</span></button>
+        <button @onclick="@(() => YesBtnClick.Invoke())"><span class="material-icons-outlined">@YesBtnIcon</span><span>@YesBtnText</span></button>
     </div>
 </div>
 
@@ -46,4 +48,10 @@
     
     [Parameter]
     public string PositioningStyle { get; set; } = "position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);";
+    
+    [Parameter]
+    public string YesBtnIcon { get; set; } = "check";
+    
+    [Parameter]
+    public string NoBtnIcon { get; set; } = "close";
 }
