--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -114,8 +114,10 @@
     //Shit click stuff.
     private static bool shiftDown;
     private static int lastIndex;
-    
     private async Task getShiftDown() => shiftDown = await JSRuntime.InvokeAsync<bool>("getShiftDown");
+    
+    private static bool ctrlDown;
+    private async Task getCtrlDown() => ctrlDown = await JSRuntime.InvokeAsync<bool>("getCtrlDown");
 
     protected override void OnInitialized()
     {
@@ -195,7 +197,8 @@
 
     private async Task ImgClicked(string uuid, string path)
     {
-        if (selectedItems.Count > 0)
+        await getCtrlDown();
+        if (selectedItems.Count > 0 || ctrlDown)
             await ToggleCheck(path);
         else
             navigationManager.NavigateTo($"/view-album-item/{albumID}/{uuid}");
