--- a/PSS/Pages/Trash.razor
+++ b/PSS/Pages/Trash.razor
@@ -46,8 +46,10 @@
 
     private static bool shiftDown;
     private static int lastIndex;
-
     private async Task getShiftDown() => shiftDown = await JSRuntime.InvokeAsync<bool>("getShiftDown");
+    
+    private static bool ctrlDown;
+    private async Task getCtrlDown() => ctrlDown = await JSRuntime.InvokeAsync<bool>("getCtrlDown");
     
     protected override void OnInitialized()
     {
@@ -117,7 +119,9 @@
     
     private async Task ImgClicked(string path)
     {
-        if (selectedItems.Count > 0) await ToggleCheck(path);
+        await getCtrlDown();
+        if (selectedItems.Count > 0 || ctrlDown)
+            await ToggleCheck(path);
     }
 
     //Show choice div
