--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -117,7 +117,7 @@
     private async Task getShiftDown() => shiftDown = await JSRuntime.InvokeAsync<bool>("getShiftDown");
     
     private static bool ctrlDown;
-    private async Task getCtrlDown() => ctrlDown = await JSRuntime.InvokeAsync<bool>("getCtrlDown");
+    private async Task GetCtrlDown() => ctrlDown = await JSRuntime.InvokeAsync<bool>("getCtrlDown");
 
     protected override void OnInitialized()
     {
@@ -197,7 +197,7 @@
 
     private async Task ImgClicked(string uuid, string path)
     {
-        await getCtrlDown();
+        await GetCtrlDown();
         if (selectedItems.Count > 0 || ctrlDown)
             await ToggleCheck(path);
         else
