--- a/PSS/Pages/Trash.razor
+++ b/PSS/Pages/Trash.razor
@@ -49,7 +49,7 @@
     private async Task getShiftDown() => shiftDown = await JSRuntime.InvokeAsync<bool>("getShiftDown");
     
     private static bool ctrlDown;
-    private async Task getCtrlDown() => ctrlDown = await JSRuntime.InvokeAsync<bool>("getCtrlDown");
+    private async Task GetCtrlDown() => ctrlDown = await JSRuntime.InvokeAsync<bool>("getCtrlDown");
     
     protected override void OnInitialized()
     {
@@ -102,7 +102,7 @@
     //If shift was held down select multiple things
     private async Task ShiftClick(int currentIndex)
     {
-    //First item is on left and item shift clicked is right. E.g., ###1####2### Loop from 1 --> 2, and add stuff in between to selected items
+        //First item is on left and item shift clicked is right. E.g., ###1####2### Loop from 1 --> 2, and add stuff in between to selected items
         if (lastIndex < currentIndex)
             await AddSelected(lastIndex, currentIndex);
         else if (lastIndex > currentIndex) //Same as above but swap 1 and 2 and the direction.
@@ -119,7 +119,7 @@
     
     private async Task ImgClicked(string path)
     {
-        await getCtrlDown();
+        await GetCtrlDown();
         if (selectedItems.Count > 0 || ctrlDown)
             await ToggleCheck(path);
     }
