Finally found bug with viewing full sized starred items
Basically the MediaRow constructor in the IndexOf call was defaulting to starred = false and thus it couldn't find that object in the List and thus index was -1. No matter what it only ever displayed the right arrow (next) btn and what would happen is the index would be set to -1 and when added to 1 would get 0, thus it would always take you to start of list. This took way too long to debug.

--- a/PSS/Shared/ViewItem.razor
+++ b/PSS/Shared/ViewItem.razor
@@ -135,7 +135,7 @@ Required Parameters:
     private static string moreOptionsVis;
     private static string editDateDivVis;
     private static List<Connection.Album> albums;
-    private static int index; //The current image's index in the list
+    private static int index = 0; //The current image's index in the list
 }
 
 @functions{
@@ -149,7 +149,13 @@ Required Parameters:
         moreOptionsVis = "hidden";
         editDateDivVis = "hidden";
         albums = Connection.GetAlbumsItemIn(path);
-        index = MediaList.IndexOf(new Connection.MediaRow(path, ogDateTaken, DateAdded, parsedID));
+        
+        //Find index. Can't use IndexOf for reasons
+        for (int i = 0; i < MediaList.Count; i++)
+        {
+            if (MediaList[i].path == path)
+                index = i;
+        }
     }
     
     private void DeleteBtnClick()
