--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -63,10 +63,10 @@
             <div class="itemDiv">
                 @if (ext is ".jpg" or ".jpeg" or ".png")
                 {
-                    <img onclick="window.open('@shortPath', '_blank').focus();" src="@shortPath" alt=""/>
+                    <img onclick="window.open('@shortPath', '_blank').focus();" src="@shortPath" alt="" loading="lazy"/>
                 }
 
-                <span>@Path.GetFileName(path)</span>
+                <span class="filenameSpan">@Path.GetFileName(path)</span>
                 <input type="datetime-local" @bind="@dateTakenList[ii]" @bind:event="oninput">
                 <span>@dateTakenList[i].ToString("ddd, MMM d, yyy h:mm:ss tt")</span>
                 <span class="warnSpan">@(dataPresentList[i] ? "" : "Date taken not found in file. Defaulting to time right now.")</span>
