--- a/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/wwwroot/css/UploadApply.css
@@ -145,6 +145,9 @@ header > input[type="text"] {
 }
 
 .itemDiv {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     margin-bottom: 10px;
 }
 
@@ -159,15 +162,23 @@ header > input[type="text"] {
     cursor: pointer;
 }
 
-.itemDiv span {
+.itemDiv > span {
     margin-left: 10px;
 }
 
-.itemDiv .warnSpan {
+.itemDiv > .filenameSpan {
+    width: 80px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: inline-block; /* SO said this was needed for ... to appear, which is weird considering I've never needed this. */
+}
+
+.itemDiv > .warnSpan {
     color: yellow;
 }
 
-.itemDiv .errorSpan {
+.itemDiv > .errorSpan {
     color: red;
 }
 
