--- a/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/wwwroot/css/UploadApply.css
@@ -46,6 +46,7 @@ button span ~ span {
 }
 
 header > input[type="text"] {
+    color: black; /* Font */
     margin-top: 12px;
     margin-left: 0;
     width: 200px;
@@ -85,7 +86,6 @@ header > input[type="text"] {
 #albums {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     border: 1px solid white;
     position: absolute;
     top: 105px;
@@ -122,6 +122,8 @@ header > input[type="text"] {
 }
 
 .cover {
+    border: 1px solid black;
+    background-color: #212121;
     border-radius: 4px;
     object-fit: cover;
     width: 60px;
