--- a/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/wwwroot/css/UploadApply.css
@@ -74,23 +74,20 @@ header > input[type="text"] {
     margin-left: 30px;
 }
 
-#chooseAlbumsSpan {
+#textAndAlbums {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: absolute;
-    right: 50px;
-    top: 78px;
-    width: 300px;
-    text-align: center;
-    z-index: 99999;
+    right: 10px;
+    top: 110px;
 }
 
 #albums {
+    margin-top: 4px;
     display: flex;
     flex-direction: column;
     border: 1px solid white;
-    position: absolute;
-    top: 105px;
-    right: 50px;
-    z-index: 9999;
     background-color: black;
     padding-right: 2px;
     user-select: none;
@@ -121,7 +118,7 @@ header > input[type="text"] {
     display: flex;
 }
 
-.cover {
+.coverDiv > img {
     border: 1px solid black;
     background-color: #212121;
     border-radius: 4px;
@@ -130,12 +127,12 @@ header > input[type="text"] {
     height: 60px;
 }
 
-.album input[type="checkbox"] {
+.album > input[type="checkbox"] {
     margin-left: 7px;
 }
 
-.album span {
-    margin-top: -1px;
+.album > span {
+    margin-top: -4px;
     margin-left: 6px;
     white-space: nowrap;
     overflow: hidden;
