date pickers now have fixed width

--- a/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/wwwroot/css/UploadApply.css
@@ -184,6 +184,7 @@ header > #statusSpan {
 }
 
 #mainDiv > .itemDiv > input {
+    width: 205px;
     color: black; /*Font color*/
     margin-left: 10px;
 }
