text test looks good thus far

--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -68,12 +68,18 @@
                     <img title="Click for Full Size Preview" onclick="window.open('@shortPath', '_blank').focus();" src="@shortPath" alt="" loading="lazy"/>
                 }
 
-                @{string name = Path.GetFileName(path);}
+                @{
+                    string name = Path.GetFileName(path);
+                    string dateString = dateTakenList[i].ToString("ddd, MMM d, yyy");
+                }
                 <span title="@name" class="filenameSpan">@name</span>
-                <span class="dateTakenSpan">@dateTakenList[i].ToString("ddd, MMM d, yyy")</span>
+                <span title="@dateString" class="dateTakenSpan">@dateString</span>
                 <input title="Choose New Date Taken" type="datetime-local" @bind="@dateTakenList[ii]" @bind:event="oninput">
-                <span class="warnSpan">@(dataPresentList[i] ? "" : "Date taken not found in file. Defaulting to time right now.")</span>
-                <span class="errorSpan">@(ItemExists(Path.GetFileName(path), dateTakenList[ii]) ? "Item already on server" : "")</span>
+                @* <span class="warnSpan">@(dataPresentList[i] ? "Dote taken not found in file. Defaulting to time right now." : "Date taken not found in file. Defaulting to time right now.")</span> *@
+                <span class="infoSpan">@("DT from metadata.")</span>
+                <span class="warnSpan">@("No DT found. DT set to now.")</span>
+                <span class="errorSpan">@("Item already in library. Won't upload.")</span>
+                @* <span class="errorSpan">@(ItemExists(Path.GetFileName(path), dateTakenList[ii]) ? "Item already on server" : "")</span> *@
             </div>
         }
     </div>
