clear button WIP

--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -61,6 +61,9 @@
             //shortPath is relative to wwwroot
             string shortPath = path.Replace(PSS.Settings.uploadRootPath, "");
             shortPath = Path.GetFileName(PSS.Settings.uploadRootPath) + shortPath;
+            
+            string name = Path.GetFileName(path);
+            string dateString = dateTakenList[i].ToString("ddd, MMM d, yyy");
 
             <div class="itemDiv">
                 @if (ext is ".jpg" or ".jpeg" or ".png")
@@ -68,10 +71,7 @@
                     <img title="Click for Full Size Preview" onclick="window.open('@shortPath', '_blank').focus();" src="@shortPath" alt="" loading="lazy"/>
                 }
 
-                @{
-                    string name = Path.GetFileName(path);
-                    string dateString = dateTakenList[i].ToString("ddd, MMM d, yyy");
-                }
+                <button class="material-icons">check</button>
                 <span title="@name" class="filenameSpan">@name</span>
                 <span title="@dateString" class="dateTakenSpan">@dateString</span>
                 <input title="Choose New Date Taken" type="datetime-local" @bind="@dateTakenList[ii]" @bind:event="oninput">
