--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -71,7 +71,6 @@
                     <img title="Click for Full Size Preview" onclick="window.open('@shortPath', '_blank').focus();" src="@shortPath" alt="" loading="lazy"/>
                 }
 
-                <button class="material-icons">check</button>
                 <span title="@name" class="filenameSpan">@name</span>
                 <span title="@dateString" class="dateTakenSpan">@dateString</span>
                 <input title="Choose New Date Taken" type="datetime-local" @bind="@dateTakenList[ii]" @bind:event="oninput">
@@ -80,6 +79,8 @@
                 <span class="warnSpan">@("No DT found. DT set to now.")</span>
                 <span class="errorSpan">@("Item already in library. Won't upload.")</span>
                 @* <span class="errorSpan">@(ItemExists(Path.GetFileName(path), dateTakenList[ii]) ? "Item already on server" : "")</span> *@
+                <button class="material-icons">close</button>
+
             </div>
         }
     </div>
