not 100% happy with it but added filter list

--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -32,6 +32,12 @@
     <span id="statusSpan">@status</span>
 </header>
 
+<div id="filter">
+    <label><input type="checkbox">Neither</label>
+    <label style="color: yellow"><input type="checkbox">Warning</label>
+    <label style="color: red"><input type="checkbox">Error</label>
+</div>
+
 @{
     GC.Collect();
     GC.WaitForPendingFinalizers();
